--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pythondatautil"
-version = "0.0.15"
+version = "0.0.16"
 authors = [
   { name="Ippei Morita", email="ippei0923@gmail.com" },
 ]
@@ -19,3 +19,4 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://github.com/m-ippei/pythondatautil"
+Documentation = "https://m-ippei.github.io/pythondatautil"
